--- a/admin/css/healthywp-admin.css
+++ b/admin/css/healthywp-admin.css
@@ -2,3 +2,37 @@
  * All of the CSS for your admin-specific functionality should be
  * included in this file.
  */
+
+#wrapper {
+ 	padding-top: 15px;
+ 	padding-bottom: 15px;
+ 	width: 99%;
+ 	background-color: #fff;
+ }
+
+ #menu-item {
+ 	display: inline-block;
+ 	margin-left: 20px;
+ 	font-weight: bold;
+ 	font-size: 15px;
+ }
+
+ #wrapper-item {
+ 	display: inline-block;
+ 	margin-left: 20px;
+ }
+
+ #likert {
+ 	width: 80%;
+ 	margin: 0px auto;
+ }
+
+ #likert-item {
+ 	display: inline-block;
+ 	width: 8.8%;
+ }
+
+ #likert-item input[type=radio]{
+   	margin: 0 auto;
+    display: table;
+}
